--- a/app/src/main/res/layout/activity_fragment_productdetail_page.xml
+++ b/app/src/main/res/layout/activity_fragment_productdetail_page.xml
@@ -10,11 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <ImageView
             android:id="@+id/productImageView"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            />
+            android:layout_height="288dp" />
 
         <Button
             android:id="@+id/scrapBtn"
