--- a/app/src/main/res/layout/activity_fragment_productdetail_page.xml
+++ b/app/src/main/res/layout/activity_fragment_productdetail_page.xml
@@ -16,12 +16,27 @@
             android:layout_width="match_parent"
             android:layout_height="288dp" />
 
-        <Button
+        <ImageButton
             android:id="@+id/scrapBtn"
+            android:layout_width="41dp"
+            android:layout_height="39dp"
+            android:background="@android:color/transparent"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="right"
+            android:scaleType="fitCenter"
+            android:src="@drawable/btn_scrap" />
+
+        <TextView
+            android:id="@+id/scrapBtnText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_marginRight="12dp"
             android:layout_gravity="right"
-            android:text="스크랩 (이미지 넣어주세요)" />
+            android:text="스크랩하기"
+            android:textSize="8dp"/>
+
 
         <GridLayout
             android:layout_width="match_parent"
@@ -88,6 +103,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:text="상품 페이지 바로 가기" />
+
     </LinearLayout>
 
 
