--- a/app/src/main/res/layout/activity_fragment_productdetail_page.xml
+++ b/app/src/main/res/layout/activity_fragment_productdetail_page.xml
@@ -46,6 +46,8 @@
                 android:layout_row="0"
                 android:layout_column="1"
                 android:gravity="center"
+                android:autoSizeMaxTextSize="12dp"
+                android:autoSizeMinTextSize="6dp"
                 android:text="브랜드 필드" />
             <TextView
                 android:id="@+id/productName"
@@ -62,6 +64,8 @@
                 android:layout_row="1"
                 android:layout_column="1"
                 android:gravity="center"
+                android:autoSizeMaxTextSize="12dp"
+                android:autoSizeMinTextSize="6dp"
                 android:text="상품명 필드" />
 
             <TextView
@@ -80,6 +84,8 @@
                 android:layout_row="2"
                 android:layout_column="1"
                 android:gravity="center"
+                android:autoSizeMaxTextSize="12dp"
+                android:autoSizeMinTextSize="6dp"
                 android:text="원" />
 
         </GridLayout>
