--- a/app/src/main/res/layout/activity_fragment_myscrap_page.xml
+++ b/app/src/main/res/layout/activity_fragment_myscrap_page.xml
@@ -6,14 +6,49 @@
     android:layout_height="match_parent"
     tools:context=".Fragment_myscrap_page_Activity">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView style="?android:textAppearanceMedium"
-            android:padding="16dp"
-            android:lineSpacingMultiplier="1.2"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="스크랩" />
-    </ScrollView>
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:paddingLeft="20dp"
+                android:layout_gravity="center"
+                android:text="스크랩 관리"/>
+
+            <!--정렬 시 사용 -->
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/recyclebinbtn"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/recyclebin"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
+                />
+
+        </LinearLayout>
+        <!--스크랩한 거 보여줌-->
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView style="?android:textAppearanceMedium"
+                android:padding="16dp"
+                android:lineSpacingMultiplier="1.2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="스크랩" />
+        </ScrollView>
+    </LinearLayout>
+
 </FrameLayout>
