--- a/app/src/main/res/layout/activity_productdetail_page.xml
+++ b/app/src/main/res/layout/activity_productdetail_page.xml
@@ -16,87 +16,56 @@
             android:layout_width="match_parent"
             android:layout_height="288dp" />
 
-        <ImageButton
-            android:id="@+id/scrapBtn"
-            android:layout_width="41dp"
-            android:layout_height="39dp"
-            android:background="@android:color/transparent"
-            android:layout_marginRight="10dp"
-            android:layout_gravity="right"
-            android:scaleType="fitCenter"
-            android:src="@drawable/btn_scrap" />
-
-        <GridLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:columnCount="4"
-            android:rowCount="3" >
-            <TextView
-                android:id="@+id/brand"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:gravity="center"
-                android:text="브랜드"/>
+            android:orientation="vertical"
+            android:layout_margin="20dp"
+            >
+            <ImageButton
+                android:id="@+id/scrapBtn"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@android:color/transparent"
+                android:layout_gravity="right"
+                android:scaleType="fitCenter"
+                android:src="@drawable/btn_scrap" />
+
             <TextView
                 android:id="@+id/brandField"
-                android:layout_width="260dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_row="0"
-                android:layout_column="1"
-                android:gravity="center"
-                android:autoSizeMaxTextSize="12dp"
-                android:autoSizeMinTextSize="6dp"
+                android:textSize="16dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical"
                 android:text="브랜드 필드" />
             <TextView
-                android:id="@+id/productName"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_row="1"
-                android:layout_column="0"
-                android:gravity="center"
-                android:text="상품명" />
-            <TextView
                 android:id="@+id/productNameField"
-                android:layout_width="260dp"
-                android:layout_height="50dp"
-                android:layout_row="1"
-                android:layout_column="1"
-                android:gravity="center"
-                android:autoSizeMaxTextSize="12dp"
-                android:autoSizeMinTextSize="6dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="25dp"
+                android:maxLines="2"
+                android:gravity="center_vertical"
                 android:text="상품명 필드" />
-
-            <TextView
-                android:id="@+id/price"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_row="2"
-                android:layout_column="0"
-                android:gravity="center"
-                android:text="가격" />
-
             <TextView
                 android:id="@+id/priceField"
-                android:layout_width="260dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_row="2"
-                android:layout_column="1"
-                android:gravity="center"
-                android:autoSizeMaxTextSize="12dp"
-                android:autoSizeMinTextSize="6dp"
+                android:textSize="20dp"
+                android:gravity="center_vertical"
                 android:text="원" />
 
-        </GridLayout>
-
+        </LinearLayout>
         <Button
             android:id="@+id/productPageBtn"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:text="상품 페이지 바로 가기" />
-
+            android:layout_marginTop="20dp"
+            android:text="상품 페이지 바로 가기"
+            android:layout_margin="20dp"
+            android:background="@drawable/colorbutton_round"
+            />
     </LinearLayout>
 </FrameLayout>
