--- a/app/src/main/res/layout/activity_fragment_marcket_page.xml
+++ b/app/src/main/res/layout/activity_fragment_marcket_page.xml
@@ -99,14 +99,14 @@
                 android:layout_height="wrap_content"
                 android:text="인기 상품"
                 android:textSize="20dp"
-                android:layout_marginLeft="40px"/>
+                android:layout_marginLeft="40px"
+                android:layout_marginBottom="40dp"/>
 
             <LinearLayout
                 android:id="@+id/lineartable"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="15px"/>
+                android:orientation="vertical"/>
 
         </LinearLayout>
 
