--- a/app/src/main/res/layout/activity_fragment_myscrap_page.xml
+++ b/app/src/main/res/layout/activity_fragment_myscrap_page.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="20dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
