--- a/app/src/main/res/layout/activity_productdetail_page.xml
+++ b/app/src/main/res/layout/activity_productdetail_page.xml
@@ -9,18 +9,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <ImageView
             android:id="@+id/productImageView"
             android:layout_width="match_parent"
-            android:layout_height="288dp" />
+            android:layout_height="300dp"
+            android:layout_marginTop="60dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_margin="20dp"
+            android:layout_margin="30dp"
             >
             <ImageButton
                 android:id="@+id/scrapBtn"
@@ -32,22 +34,15 @@
                 android:src="@drawable/btn_scrap" />
 
             <TextView
-                android:id="@+id/brandField"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:textSize="16dp"
-                android:layout_marginTop="20dp"
-                android:gravity="center_vertical"
-                android:text="브랜드 필드" />
-            <TextView
                 android:id="@+id/productNameField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textSize="25dp"
-                android:maxLines="2"
+                android:maxLines="3"
                 android:gravity="center_vertical"
-                android:text="상품명 필드" />
+                android:text="[브랜드] 상품명 필드"
+                android:layout_marginTop="20dp"/>
             <TextView
                 android:id="@+id/priceField"
                 android:layout_width="match_parent"
@@ -55,17 +50,56 @@
                 android:textSize="20dp"
                 android:gravity="center_vertical"
                 android:text="원" />
-
+            <Button
+                android:id="@+id/productPageBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="상품 페이지 바로 가기"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/colorbutton_round"
+                />
         </LinearLayout>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="85dp"
+        android:layout_gravity="bottom"
+        android:backgroundTint="#f1f3f4">
+
         <Button
-            android:id="@+id/productPageBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:text="상품 페이지 바로 가기"
-            android:layout_margin="20dp"
-            android:background="@drawable/colorbutton_round"
-            />
+            android:id="@+id/marcketbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:backgroundTint="#f1f3f4"
+            android:drawableTop="@drawable/marcket_resize"
+            android:paddingTop="10dp"
+            android:text="@string/마켓"
+            android:textColor="#3c3f41"/>
+
+        <Button
+            android:id="@+id/restaurantbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:backgroundTint="#f1f3f4"
+            android:drawableTop="@drawable/vegan_resize"
+            android:paddingTop="8dp"
+            android:text="@string/음식점"
+            android:textColor="#3c3f41"/>
+
+        <Button
+            android:id="@+id/scrapbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:backgroundTint="#f1f3f4"
+            android:drawableTop="@drawable/bookmark_resize"
+            android:paddingTop="10dp"
+
+            android:text="@string/my스크랩"
+            android:textColor="#3c3f41"/>
     </LinearLayout>
 </FrameLayout>
