--- a/app/src/main/res/layout/fragment_marcket_brand.xml
+++ b/app/src/main/res/layout/fragment_marcket_brand.xml
@@ -14,7 +14,8 @@
             android:id="@+id/lineartable"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="30dp">
 
             <TextView
                 android:id="@+id/callBrand"
