--- a/app/src/main/res/layout/fragment_marcket_category.xml
+++ b/app/src/main/res/layout/fragment_marcket_category.xml
@@ -58,8 +58,7 @@
                 android:id="@+id/lineartable"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="15px" />
+                android:orientation="vertical"/>
 
         </androidx.core.widget.NestedScrollView>
     </LinearLayout>
