--- a/app/src/main/res/layout/activity_brand.xml
+++ b/app/src/main/res/layout/activity_brand.xml
@@ -18,6 +18,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:background="@drawable/outline_arrow_back_ios_24"
+                android:layout_marginLeft="10dp"
                 android:layout_gravity="center"
                 />
             <TextView
