--- a/app/src/main/res/layout/fragment_marcket_brand.xml
+++ b/app/src/main/res/layout/fragment_marcket_brand.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:id="@+id/lineartable"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="400dp"
             android:orientation="vertical"
             android:paddingTop="30dp">
 
