--- a/app/src/main/res/layout/fragment_marcket_category.xml
+++ b/app/src/main/res/layout/fragment_marcket_category.xml
@@ -51,7 +51,7 @@
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="match_parent"
             android:layout_margin="10dp">
 
             <LinearLayout
