--- a/app/src/main/res/layout/activity_fragment_myscrap_page.xml
+++ b/app/src/main/res/layout/activity_fragment_myscrap_page.xml
@@ -26,6 +26,7 @@
             android:background="#f1f3f4"/>
 
         <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -38,4 +39,19 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
+
+        <Button
+            android:id="@+id/go_up"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="80dp"
+            android:layout_marginRight="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/circle_up_icon"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
