--- a/app/src/main/res/layout/activity_fragment_restaurant_page.xml
+++ b/app/src/main/res/layout/activity_fragment_restaurant_page.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,11 +19,10 @@
                 android:layout_height="wrap_content"
                 android:text="지도" />
 
-            <fragment
-                android:id="@+id/map"
-                android:name="com.google.android.gms.maps.SupportMapFragment"
+            <WebView
+                android:id="@+id/webView"
                 android:layout_width="match_parent"
-                android:layout_height="672dp" />
+                android:layout_height="645dp"></WebView>
         </LinearLayout>
 
     </ScrollView>
